2005-12-24  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.h (lang_output_section_statement_type): Add prev.
	* ldlang.c (output_statement_newfunc): Set os.prev.
	(lang_insert_orphan): Likewise.
	(output_prev_sec_find): Use os.prev.

2005-12-22  Santosh Raktawan <santoshr2@kpitcummins.com>

	* ld/emulparms/h8300helf.sh (TINY_READONLY_SECTION,
	TINY_DATA_SECTION, TINY_BSS_SECTION): Define.
	* ld/emulparms/h8300self.sh: Likewise.
	* ld/emulparms/h8300sxelf.sh: Likewise.
	* ld/scripttempl/elf.sc: Add TINY_READONLY_SECTION,
	TINY_DATA_SECTION, TINY_BSS_SECTION.
 
2005-12-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/2065
	* ldlang.c (output_statement_newfunc): Revert the change made on
	2005-11-16.
	(output_prev_sec_find): Likewise.
	* ldlang.h (lang_statement_list_type): Likewise.

2005-12-16  Nathan Sidwell  <nathan@codesourcery.com>

	Second part of ms1 to mt renaming.
	* emulparams/elf32mt.sh (ARCH, OUTPUT_FORMAT): Adjust.

2005-12-14  Jakub Jelinek  <jakub@redhat.com>

	* scripttempl/elf.sc: Put .gnu.linkonce.d.rel.ro.* sections into
	.data.rel.ro output section.  Fix a pasto for -z nocombreloc
	.rela.data.rel.ro section content.

2005-12-12  Nathan Sidwell  <nathan@codesourcery.com>

	* Makefile.am (ALL_EMULATIONS): Replace ms1 files with mt files.
	(eelf32mt.c): Update target name and dependencies.
	* Makefile.in: Rebuilt.
	* configure.tgt: Replace ms1 arch with mt arch.
	* emulparams/elf32mt.sh: Renamed from elf32ms1.sh. Update
	comment.

2005-12-11  Bernhard Fischer  <aldot@gcc.gnu.org>

	* scripttempl/armbpabi.sc: Fix typo in comment for .ctors.
	* scripttempl/elf.sc: Ditto.
	* scripttempl/elf32sh-symbian.sc: Ditto.
	* scripttempl/elf_chaos.sc: Ditto.
	* scripttempl/elfd10v.sc: Ditto.
	* scripttempl/elfd30v.sc: Ditto.
	* scripttempl/elfxtensa.sc: Ditto.
	* scripttempl/iq2000.sc: Ditto.
	* scripttempl/xstormy16.sc: Ditto.

2005-12-08  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc32elf.em (emit_stub_syms): New var.