@@ -1,3 +1,8 @@
+2005-12-27  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+
 2005-12-24  Alan Modra  <amodra@bigpond.net.au>
 
 	* ldlang.h (lang_output_section_statement_type): Add prev.
